[gd_scene load_steps=6 format=3 uid="uid://cgt4erjwd87a2"]

[ext_resource type="Script" path="res://main.gd" id="1_g36sn"]
[ext_resource type="PackedScene" uid="uid://yv53eeuel8ho" path="res://player.tscn" id="1_sv3tm"]
[ext_resource type="Script" path="res://Walls.gd" id="2_keaxf"]

[sub_resource type="Environment" id="Environment_vuc8w"]
background_mode = 1
background_color = Color(0.403903, 8.42288e-07, 9.62615e-08, 1)
ambient_light_source = 1
fog_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_qkmq0"]
font_size = 70

[node name="Main" type="Node3D"]
script = ExtResource("1_g36sn")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.5)
size = Vector3(9, 1, 27)

[node name="Player" parent="." instance=ExtResource("1_sv3tm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 10, 2)
environment = SubResource("Environment_vuc8w")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.641457, -0.711106, 0.287858, -0.183013, 0.506236, 0.842752, -0.74501, 0.487907, -0.45487, 0, 14, 0)
shadow_enabled = true

[node name="Walls" type="Node3D" parent="."]
script = ExtResource("2_keaxf")

[node name="WallSpawnTimer" type="Timer" parent="Walls"]
autostart = true

[node name="SpeedUpTimer" type="Timer" parent="Walls"]
wait_time = 10.0
autostart = true

[node name="RestartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -27.5
offset_right = 99.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "RESTART
"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_right = 239.0
offset_bottom = 90.0
grow_horizontal = 2
text = "0
"
label_settings = SubResource("LabelSettings_qkmq0")
horizontal_alignment = 1

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="timeout" from="Walls/WallSpawnTimer" to="Walls" method="_on_wall_spawn_timer_timeout"]
[connection signal="timeout" from="Walls/SpeedUpTimer" to="Walls" method="_on_speed_up_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
